# LCE-Qt-Launcher

./: .envrc  .gitattributes  .gitignore  .gitmodules  CODE-DE-CONDUITE.md  PKGBUILD  THANKS.md  bsd-helper.sh  build-dev.bat  build-dev.sh  build.bat  build.sh  clean.cmd  clean.ps1  clean.sh  code-of-conduct.md  config.py  default.lce_inst  default.nix  flake.nix  form.ui  hatch_build.py  io.github.xgui4.lce_qt_launcher.metainfo.xml  launcher.py  license.md  lisezmoi.md  main.py  nix-helper.sh  note.txt  packages.bat  packages.cmd  packages.ps1  packages.py  packages.sh  packges.sh  prepare.bat  prepare.sh  pyproject.toml  pyproject.toml.save  pysidedeploy.spec  (+11 more)
.github/: requirements.txt
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  config.yml  feature.yaml
.github/workflows/: PKGBUILD  flatpak.yml  nightly.yml  site.yml  stable-release.yml  stable.yml  windows-release.yml
assets/images/: download_img copy.ps1  download_img.ps1  download_img.sh  pwsh-bypass.bat
assets/languages/: en.json  fr.json  translations.json
assets/styles/: dark.qss  light.qss  minecraft.qss
data/: guide.jsonc  lce_qt_launcher.ini
data/defaults_instances/: 360Revived.lce_inst  aether.lce_inst  default.lce_inst  hellishends.lce_inst  legacy_evolved.lce_inst  mclce.lce_inst  neoLegacy.lce_inst  revelation.lce_inst
docs/en/: COMPILING.md  RUNNING.md  SETUP.md
docs/fr/: COMPILATION.md  SETUP.md  UTILISATION.md
freebsd-ports/: Makefile  distinfo  install  pkg-descr  pkg-plist
pkg/: LCE-Qt-Launcher.desktop  PKGBUILD-git  PKGBUILD-nightly  PKGBUILD-nighty  PKGBUILD-pre-alpha  github.io.xgui4.lce_qt_launcher.desktop  io.github.xgui4.lce_qt_launcher.metainfo.xml  windows-setup-nigthly.iss  windows-setup.iss
schemas/: lce_qrt_inst_config.json  x-application-lce_inst_config.json
scripts/: build.cmd  build.ps1  build.sh  clean.cmd  clean.ps1  clean.sh  packages.cmd  packages.ps1  packages.sh  prepare.cmd  prepare.sh  run.cmd  run.sh
src/: __init__.py  about.ui  app_config.py  browser_dialog.py  build_info.py  cli.py  cmd_arg.py  config.py  contentInstaller.ui  downloader.py  features.py  form.ui  instance.ui  instance_manager.py  instance_news.html  instances.qml  json_trans.py  launcher.py  main.py  settingDialog.ui  setting_dialog.py  setup.ui  skin-manager.html  system_info.ui  system_manager.py  term_service.py  theme.py  user_pref.py  utils.py
src/lce_qt_launcher/: __init__.py  app.py  app_context.py  build_info.py  cli.py  downloader.py  features.py  holyday.py  json_trans.py  main.py  preferences.py  term_service.py  user_pref.py  utils.py
src/lce_qt_launcher/gui/: browser_dialog.py  launcher.py  license_str.py  setting_dialog.py
src/lce_qt_launcher/managers/: display_manager.py  downloader.py  import_managers.py  instance_manager.py  mod_manager.py  mod_managers.py  proton_manager.py  steam_manager.py  steam_manager.rs  system_manager.py
src/lce_qt_launcher/models/: app_data.py  image_class.py  pref.py  preferences.py  theme.py
src/lce_qt_launcher/utils/: __init__.py  holiday.py  json_trans.py
src/lce_qt_launcher/views/: about_view.py  browser_dialog.py  cli.py  cmd_arg.py  content_installer_dialog.py  image_class.py  instance_editor_view.py  instance_view.py  launcher.py  setting_dialog.py  system_info_view.py  term_service.py  theme.py
www/: code-of-conduct.html  download.html  index.html  instance_news.html  license.html  lisezmoi.html  marketplace.html  news.html  shop.html  skins.html
www/css/: button.css  style.css
www/fr/: CODE-DE-CONDUITE.html  download.html  index.html  marketplace.html  news.html  shop.html  skins.html
www/js/: form-handler.js  generate_shop.js
