[build-system]
requires = ["hatchling", "PySide6; sys_platform == 'win32' or sys_platform == 'linux' or sys_platform == 'darwin'"]
build-backend = "hatchling.build"

[project]
name = "LCE-Qt-Launcher"
version = "26.4.18a1"
description = "This is a custom Free/Libre Minecraft LCE Launcher written in Python and Qt. (Nighly Build)"
requires-python = ">3.10, <3.13"
license = "GPL-3.0-or-later"
readme = "readme.md"
license-files = [ "license.md" ] 

dependencies = [
    "PySide6==6.11.0; sys_platform == 'win32' or sys_platform == 'linux' or sys_platform == 'darwin'",
    "requests==2.33.1",
    "platformdirs",
    "rich==14.3.3",
    "hatch==1.16.5",
    "Nuitka==4.0.7",
    "patchelf==0.17.2.4; sys_platform == 'linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lce_qt_launcher"]

[tool.hatch.build.targets.wheel.sources]
"src/lce_qt_launcher" = "lce_qt_launcher"

"src/main.py" = "main.py"
"src/ui_form.py" = "ui_form.py"
"src/ui_instance.py" = "ui_instance.py"
"src/ui_system_info.py" = "ui_system_info.py"
"src/ui_settingDialog.py" = "ui_settingDialog.py"
"src/ui_about.py" = "ui_about.py"
"src/res_rc.py" = "res_rc.py"

[project.scripts]
lce-qt-launcher = "main:main"

[project.urls]
Repository = "https://github.com/xgui4/LCE-QT-Launcher"
LicenseURL = "https://www.gnu.org/licenses/gpl-3.0"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.envs.default.scripts]
packages = "python packages.py"
run-app = "python run.py"

[tool.hatch.build]
artifacts = [
    "src/ui_*.py",
    "src/res_rc.py",
]

[tool.pyside6-project]
files = [
    "src/lce_qt_launcher/__init__.py",
    "src/lce_qt_launcher/app.py",
    "src/lce_qt_launcher/app_context.py",
    "src/lce_qt_launcher/downloader.py",
    "src/lce_qt_launcher/features.py",
    "src/lce_qt_launcher/views/__init__.py",
    "src/lce_qt_launcher/views/cmd_args.py",
    "src/lce_qt_launcher/views/launcher.py",
    "src/lce_qt_launcher/views/setting_dialog.py",
    "src/lce_qt_launcher/views/browser_dialog.py",
    "src/lce_qt_launcher/views/preferences.py",
    "src/lce_qt_launcher/views/term_service.py",
    "src/lce_qt_launcher/views/cli.py",
    "src/lce_qt_launcher/views/launcher.py",
    "src/lce_qt_launcher/views/theme.py",
    "src/lce_qt_launcher/views/launcher.py",
    "src/lce_qt_launcher/managers/__init__.py",
    "src/lce_qt_launcher/managers/instance.py",
    "src/lce_qt_launcher/managers/system_managers.py",
    "src/lce_qt_launcher/managers/steam_managers.py",
    "src/lce_qt_launcher/managers/proton_managers.py",
    "src/lce_qt_launcher/models/__init__.py",
    "src/lce_qt_launcher/models/image_class.py",
    "src/lce_qt_launcher/utils/__init__.py",
    "src/lce_qt_launcher/utils/json_trans.py",
    "src/lce_qt_launcher/utils/holyday.py",
    "src/system_info.ui",
    "src/instance.ui",
    "src/form.ui",
    "src/main.py",
    "license.md",
    "lisezmoi.md",
    "readme.md",
    "res.qrc",
    "CODE-DE-CONDUITE.md",
    "code-of-conduct.md",
    "assets/app.ico"
]
